update Deck class